[package]
name = "car-simu-druid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["svg"]}
car-simu-lib = { path = "../car-simu-lib" }


[profile.release] 
debug = true
